# nirs4all-tools

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  version-guard.yml
docs/maintenance/: final_report.md  quality_gates.md  release_checklist.md  repository_audit.md
docs/maintenance/codex_reviews/: 03_main_diff_review.md  04_final_release_readiness_review.md
src/nirs4all_tools/: __init__.py  __main__.py  checksums.py  cli.py  commands.py  contracts.py  detect.py  errors.py  exit_codes.py  legacy_runs.py  loose_predictions.py  native_results.py  policy.py  vocab.py  workspace_v2.py
tests/: conftest.py  test_cli.py  test_commands.py  test_contracts.py  test_detect.py  test_native_results.py  test_policy.py  test_real_golden_fixtures.py
tests/e2e/: test_legacy_save_predictions_web.py
tests/fixtures/legacy/: README.md  sqlite_legacy_arrays_workspace.sql
tests/fixtures/legacy/old_workspace_mixed/: rerunnable_pipeline.n4a.json  run_predictions.json  sample.meta.parquet  store.duckdb
tests/fixtures/legacy/old_workspace_mixed/runs/run-2024-legacy/pipeline-pls/: manifest.yaml
